--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@phosphor-icons/react": "^2.1.5",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
+    "country-list": "^2.3.0",
     "gsap": "^3.12.5",
     "next": "14.1.0",
     "parallax-js": "^3.1.0",
@@ -25,8 +26,11 @@
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.50.1",
     "react-mailchimp-subscribe": "^2.1.3",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.0",
     "react-scroll-to-top": "^3.0.0",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "react-slick": "^0.30.2",
     "react-sticky-box": "^2.0.5",
     "react-tabs": "^6.0.2",
@@ -42,11 +46,13 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/node": "20.14.9",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "react-hooks-paginator": "^0.5.1",
     "react-paginate": "^8.2.0",
     "sass": "^1.71.1",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "typescript": "5.5.2"
   }
 }
