--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "country-list": "^2.3.0",
+    "dotenv": "^16.4.5",
     "gsap": "^3.12.5",
     "next": "14.1.0",
     "parallax-js": "^3.1.0",
